# Generic-Laxer

./: .clang-format  .gitignore  CMakeLists.txt  accept_state.hpp  dfa.hpp  gen_doc.py  laxer.code-workspace  laxer.cpp  laxer.h  laxer.hpp  laxer_rule.json  main.cpp  meson.build  nfa.cpp  nfa.hpp  nfa.md  regex.hpp  regex_main.cpp  regex_visualize.md  simple_grammar.cpp  token.hpp  visualize_regexp.cpp  xmake.lua
edl_demo/: keywords.edl  numbers.edl  std.edl
regex/: basic_dfa.hpp  basic_fa.hpp  basic_nfa.hpp  basic_state.hpp  builder.hpp  dfa.cpp  dfa.hpp  dfa_builder.cpp  final_state.hpp  formatter.hpp  formatters.hpp  nfa.cpp  nfa.hpp  nfa_builder.cpp  regex.hpp  regex_concepts.hpp  regex_typedef.hpp  state.hpp  xmake.lua
regex/testcases/: advanced_dfa_minimize_test.cpp  basic_test.cpp  complex_test.cpp  comprehensive_test.cpp  debug_test.cpp  dfa_minimize_test.cpp  nfa_merge_test.cpp  nfa_test.cpp  parallel_test.cpp  pipe_operator_test.cpp  search_test.cpp  semantics_test.cpp  simple_test.cpp
regex_demo/: README_regex.md  regex_demo.hpp  regex_test.cpp  simple_test.cpp  test_complex.cpp  test_dfa.cpp
test_cases/: identifiers.edl  strings.edl
testcases/: basic_test.cpp  nfa_with_rule_id.hpp
